Mark 15: Fixed Home Height Issues on Mobile devices (Addr. Bar) using jQuery

--- a/assets/css/index_styles.css
+++ b/assets/css/index_styles.css
@@ -11,10 +11,13 @@
   margin-bottom: 0px;
   width: 100%;
 }
+html, body{
+  overflow-x: hidden;
+}
 hr{
   background-color: white;
   width: 40vw;
-  min-width: 500px;
+  min-width: 300px;
   margin-top:5px;
   margin-bottom: 5px;
 }
@@ -81,13 +84,13 @@ ul#social{
   padding:0px;
   text-align: center;
   color: white;
-  width: 100%;
+  width: 100vw;
 }
 
 .overlay{
   background-color: rgba(0, 0, 0, 0.5);
   height: 99.9vh;
-  width: 100%;
+  width: 100vw;
 }
 
 @keyframes fadeInAnimation {
